--- a/css/style_homepage.css
+++ b/css/style_homepage.css
@@ -36,3 +36,12 @@
 .color-primary-3 {
   color: #99e2d0;
 }
+.color-bg-1 {
+  color: #eaeaea
+}
+.color-bg-2 {
+  color: #f6f6f6
+}
+.color-bg-footer {
+  color: #353535
+}
