--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -1,9 +1,11 @@
 /*Aspect général de la page*/
 html {
-  margin: 0;
-  padding: 0;
 
   body {
+    margin: 0;
+    padding: 0;
+    
+
     .homepage {
       font: {
         size: 1em;
@@ -14,7 +16,6 @@ html {
       width: 100%;
       margin-left: auto;
       margin-right: auto;
-      padding: 20px;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -109,50 +110,60 @@ html {
 
   main {
     background-color: $color-bg;
-
-    .restaurant {
-      position: relative;
-    }
-
-    .label_new {
-      position: absolute;
-      float: left;
-      right: 20%;
-      margin-top: 8px;
-
-      background-color: $color-primary-3;
-      padding: 4px 20px 4px 20px;
-      color: darken($color: $color-primary-3, $amount: 40%);
-    }
-    .restaurant_btn {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      background-color: $color-white;
-      border-radius: 10px;
-      border: 3px solid $color-bg;
-      margin-bottom: 20px;
-
-      img {
-        width: 300px;
-        height: 200px;
-      }
-
-      .restaurant_label {
+      
+      .restaurant_btn {
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        margin: auto;
+        background-color: $color-white;
+        border: 3px solid $color-bg;
+        box-shadow: 0 5px 5px 0 darken($color: #f6f6f6, $amount: 10);
+        border-radius: 15px;
+        margin-bottom: 20px;
+        width: 300px;
+      
+        .restaurant_img {
+              position: relative; 
+               
+              img{
+                width: 300px;
+                height: 200px;
+                border-radius: 15px 15px 0 0;
+              }
 
-        .heart {
-          flex: 1;
-          text-align: right;
-        }
-        .restaurant_name {
-          flex: 2;
-          text-align: left;
-          padding-left: 8px;
-        }
-      }
-    } //end restaurant
+              .label_new {
+                position: absolute;
+                right: 10px;
+                top: 10px;
+                margin-top: 8px;
+
+                background-color: $color-primary-3;
+                padding: 4px 20px 4px 20px;
+                color: darken($color: $color-primary-3, $amount: 40%);
+                }//end label_new
+       }//end restaurant_img
+              
+        .restaurant_label {
+                display: flex;
+
+                .heart {
+                  flex: 1;
+                  text-align: right;
+                  padding-right: 8px;
+                }
+
+                .restaurant_name {
+                  flex: 2;
+                  text-align: left;
+                  padding-left: 8px;
+                }
+        }//end restaurant_label
+
+      }//end restaurant_btn 
+
+        
+
   } //end main
+
+
 } //end html
