MAJ02 WorkDay 29sept2020

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -9,12 +9,13 @@ footer {
   padding-top: 20px;
   padding-bottom: 20px;
   color: $color-white;
+  line-height: 1.5rem;
 
   h1 {
     padding-bottom: 10px;
     font: {
       family: $logo-title-font;
-      size: $fontsize-regular;
+      size: $fontsize-regular*1.5;
     }
   }
 
@@ -25,7 +26,7 @@ footer {
   .links {
     display: flex;
     flex-direction: column;
-    line-height: 20px;
+    line-height: 1.5rem;
   }
 
   a {
