--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -11,7 +11,7 @@ html {
       }
       line-height: 1.5;
       text-align: center;
-      width: 100%;
+      width: 400px;
       margin-left: auto;
       margin-right: auto;
       display: flex;
