--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -19,9 +19,11 @@ $logo-title-size: 1.75rem;
 $fontsize-small: 0.9rem;
 
 //Titres
-$h2-font: $logo-title-font bold $logo-title-size;
-$h3-font: $logo-title-font bold;
-$h4-font: $txt-font $logo-title-size;
+$h1-font: $logo-title-font $logo-title-size; //titre principal des pages du site
+$h2-font: $logo-title-font bold $logo-title-size; //homepage : nom des rubriques
+$h3-font: $logo-title-font bold; //homepage : nom des retaurants
+$h4-font: $txt-font $fontsize-regular; //nom des catégories : entrées, plat, dessert
+$h5-font: $txt-font $fontsize-regular bold; //nom des plats
 
 //Media-queries
 $screen-sm-min: 576px; // Small tablets and large smartphones (landscape view)
