--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -2,6 +2,7 @@ footer {
   background-color: $color-bg-footer;
   text-align: left;
   width: 350px;
+  margin: auto;
   font: {
     family: $txt-font;
     size: $fontsize-small;
@@ -30,16 +31,15 @@ footer {
     flex-direction: column;
     padding-left: 20px;
     padding-bottom: 20px;
-  }
 
-  a {
-    padding-right: 10px;
-    text-decoration: none;
-    color: $color-white;
-    &:hover {
-      color: $color-primary-3;
-      text-decoration: underline;
+    a {
+      padding-right: 10px;
+      text-decoration: none;
+      color: $color-white;
+      &:hover {
+        color: $color-primary-3;
+        text-decoration: underline;
+      }
     }
-  }
-  
+  }//end links
 }
