--- a/sass/_mentions_legales.scss
+++ b/sass/_mentions_legales.scss
@@ -17,12 +17,12 @@ body{
 
     img{
       padding-top: 20px;
-      max-width: 100%;
+      max-width: 70%;
     }
     
 
     font: {
-        size: 1em;
+        size: 1rem;
         family: $txt-font;
     }
     
