--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,9 @@
 @import "variables";
 @import "mixins";
 
+//import animations
+@import "animations";
+
 //imports styles
 @import "homepage";
 @import "header";
