--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,5 @@
-//import variables et mixins
+//imports variables - mixins - fonctions
 @import "variables";
-@import "mixins";
 
 //imports styles
 @import "homepage";
@@ -9,5 +8,5 @@
 @import "menu_page";
 @import "mentions_legales";
 
-//import animations
+//imports animations
 @import "animations";
