spinner WorkDay 9oct2020

--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -91,4 +91,10 @@
   }
 }
 
+//--- ANIMATION Loading Spinner --- En cours : modifs non prisent en compte... pkoi ????
+.fa-spin{
+  color: $color-primary-3;
+}
+
+
 
