fix animations autoprefixer 10oct2020

--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -84,9 +84,17 @@
   }
 }
 
+@-webkit-keyframes checkRotation {
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
 @keyframes checkRotation {
   100% {
-    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
@@ -112,17 +120,27 @@
   -webkit-animation: spin 2s linear forwards;
 }
 
-@keyframes spin {
-  0% { 
-    transform: rotate(0deg);
-    opacity: 1;
 
+@-webkit-keyframes spin {
+  0% { 
+    -webkit-transform: rotate(0deg); 
+            transform: rotate(0deg);
    }
   100% { 
-    transform: rotate(360deg);
-    opacity: 0; 
+    -webkit-transform: rotate(360deg); 
+            transform: rotate(360deg);
+    visibility: hidden;
   }
 }
-
-
+@keyframes spin {
+  0% { 
+    -webkit-transform: rotate(0deg); 
+            transform: rotate(0deg);
+   }
+  100% { 
+    -webkit-transform: rotate(360deg); 
+            transform: rotate(360deg);
+    visibility: hidden;
+  }
+}
 
