fix loader width height

--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -99,7 +99,7 @@
   }
 }
 
-//--- ANIMATION Loading Spinner --- En cours 
+//--- ANIMATION Loading Spinner --- 
 
 
 .loader {
@@ -108,8 +108,8 @@
   border-top: 20px solid violet;
   border-right: 20px solid aqua;
   border-bottom: 20px solid pink;
-  width: 100vw;
-  height: 100vh;
+  width: 90vw;
+  height: 70vh;
   
 
   position: absolute;
