--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,9 @@
 @import "footer";
 @import "menu_page";
 @import "mentions_legales";
+@import "mediaqueries";
+
 
 //imports animations
 @import "animations";
+
