--- a/sass/_menu_page.scss
+++ b/sass/_menu_page.scss
@@ -49,6 +49,10 @@ html {
           padding-top: 4px;
           font-size: $logo-title-size * 0.9;
         }
+
+        .fa-heart{
+          padding-right: 45px;
+        }
       }
     } //end zone menu_title
 
