--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -170,10 +170,12 @@ html {
       .restaurant_label {
         display: flex;
 
-        .heart {
+        .heart1 {
           flex: 1;
           text-align: right;
-          padding-right: 8px;
+        }
+        .fa-heart{
+          padding-right: 10px;
         }
 
         .restaurant_name {
