--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -17,7 +17,17 @@
 } 
 
 .heart2:hover {
-  animation: 0.5s filling linear forwards;
+  -webkit-animation: 0.5s filling linear forwards;
+          animation: 0.5s filling linear forwards;
+}
+  
+@-webkit-keyframes filling {
+  from {
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
 }
   
 @keyframes filling {
@@ -34,17 +44,34 @@
 //--- ANIMATION MENU --- Affichage des blocs : Entrées, Plats, Desserts.
 
 .menu_wrapper {
-  animation: 1.2s slide ease-in-out;
-  animation-fill-mode: backwards; //point de depart de l'animation se cale sur l'apparence keyframe from soit opacity 0
+  -webkit-animation: 1.2s slide ease-in-out;
+          animation: 1.2s slide ease-in-out;
+  -webkit-animation-fill-mode: backwards; //point de depart de l'animation se cale sur l'apparence keyframe from soit opacity 0
+          animation-fill-mode: backwards; 
+}
+
+@-webkit-keyframes slide {
+  from {
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    opacity: 1;
+  }
 }
 
 @keyframes slide {
   from {
-    transform: translateY(30px);
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px);
     opacity: 0;
   }
   to {
-    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
     opacity: 1;
   }
 }
@@ -63,20 +90,28 @@
   cursor: pointer;
 
   .menu_bloc_price {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 
     .price {
-      flex: 1;
+      -webkit-box-flex: 1;
+          -ms-flex: 1;
+              flex: 1;
     }
 
-    .check {
-      flex: 1;
+    .check { //zone contenant icone tournant
+      -webkit-box-flex: 1;
+          -ms-flex: 1;
+              flex: 1;
       background-color: $color-primary-3;
       border-radius: 0 10px 10px 0;
       color: white;
       text-align: center;
       font-size: $logo-title-size;
-      justify-content: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
       padding-top: 20px;
       padding-right: 0;
       overflow: hidden;
@@ -85,28 +120,35 @@
   }
 
   & :hover {
-    .check { //zone check contenant icone glisse
+    .check { //zone check glisse
       display: block;
-      animation: 2s checkSlide backwards;
+      -webkit-animation: 2s checkSlide backwards;
+              animation: 2s checkSlide backwards;
       opacity: 1;
 
       .fa-check-circle { //icone tourne
-        animation: 1s checkRotation linear;
+        -webkit-animation: 1s checkRotation linear; 
+                animation: 1s checkRotation linear;
       }
     }
-    .price p{ //le prix glisse 
-      animation: 0.5s checkSlide;
+    .price p{  // prix glisse
+      -webkit-animation: 0.5s checkSlide;  
+              animation: 0.5s checkSlide;
     }
   }
 } //end menu_bloc
 
 @keyframes checkSlide {
   from {
-    transform: translateX(5px);
+    -webkit-transform: translateX(5px);
+        -ms-transform: translateX(5px);
+            transform: translateX(5px);
     opacity: 0;
   }
   to {
-    transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+        -ms-transform: translateX(0px);
+            transform: translateX(0px);
     opacity: 1;
   }
 }
@@ -127,12 +169,12 @@
 }
 
 
-
 //--- ANIMATION Loading Spinner --- 
 //homepage se cache un moment pendant loader puis apparait et loader disparait
 
 .homepage{
-  animation: 2.7s show; //disparition apparition homepage
+  -webkit-animation: 2.7s show; //disparition apparition homepage
+          animation: 2.7s show;
 }
 
 @-webkit-keyframes show {
@@ -168,11 +210,19 @@
   left: 5%;
   z-index: 999;
 
+  display: -webkit-box;
+
+  display: -ms-flexbox;
+
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
  
-  animation: 2.5s spin linear forwards; //rotation loader
+  animation: 2.5s spin linear forwards; //rotation du loader
   -webkit-animation: spin 2.5s linear forwards;
 }
 
